<resources>
    <string name="app_name">FitMe_Group9</string>
    <string name="title">FitMe</string>
    <string name="copyright">Group 9 Project - Software Engineering</string>
    <string name="weightTextCurrent">Current Weight: </string>
    <string name="weightTextTarget">Target Weight: </string>
    <string name="distanceText">Avg Distance Travelled: </string>
    <string name="distance">Total Distance: </string>
    <string name="calorieText">Avg Daily Calories: </string>
    <string name="speed">Average Speed: </string>
    <string name="points">Total Points:</string>
    <string name="titleCalories">Calorie Goals</string>
    <string name="titleBreakfast">Breakfast</string>
    <string name="titleLunch">Lunch</string>
    <string name="titleDinner">Dinner</string>
    <string name="titleSnacks">Snacks</string>
    <string name="titleWeight">Weight Loss</string>
    <string name="titleWeightGoal">Target Weight: </string>
    <string name="titleWeightLost">Total Weight Lost: </string>
    <string name="titleActivity">Activity Points Earned</string>
    <string name="titleScores">Leaderboards</string>
    <string name="titleCalories2">Calories:</string>
    <string name="titleCalorieSummary">So far today...</string>
    <string name="titleCalorieGoal">Today\'s Goal: </string>
    <string name="title_activity_maps">Map</string>
</resources>
