<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background">

    <!-- Title Weight -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleWeight"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="45sp"
        android:layout_gravity="center"
        />

    <!-- Weight Info -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        android:text="@string/weightTextCurrent"
        android:layout_gravity="start"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weightTextTarget"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        android:layout_gravity="start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        android:text="@string/titleWeightLost"
        android:layout_gravity="start"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"

        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:text="Add New Weight"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:text="Set Target Weight"/>

    </LinearLayout>


    <!-- Add Graph here -->

    <!-- Add Picture slideshow here -->

</LinearLayout>