<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background">

    <!-- Title Global -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleScores"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="45sp"
        android:layout_gravity="center"
        />

    <!-- Title Calories -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleCalories"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:layout_gravity="left"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:id="@+id/spinner1">
    </Spinner>

    <!-- Add List Code Here -->

    <!-- Title Weight -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleWeight"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:layout_gravity="left"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:id="@+id/spinner2">

    </Spinner>

    <!-- Add List Code Here -->

    <!-- Title Activity -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleActivity"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:paddingTop="20dp"
        android:layout_gravity="left"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:id="@+id/spinner3">
    </Spinner>

    <!-- Add List Code Here -->

</LinearLayout>