<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background">

    <!-- Title Activity -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Activity"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="45sp"
        android:layout_gravity="center"
        />

    <!-- Top Screen - General Info -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <!-- Distance Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_weight="1"
            />

        <!-- Speed Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:textColor="@color/colorWhite"
            android:layout_weight="1"
            android:textSize="20sp"
            />

        <!-- Points Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            />

    </LinearLayout>

    <!-- Insert Map Code Here -->

    <!-- Start Button -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="bottom">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/start"
            android:background="@color/invisible"
            android:id="@+id/start_button"
            />
    </LinearLayout>
</LinearLayout>